<resources>
    <string name="app_name">PuntenHackjam</string>
    <string name="deskcucitangan"> <b> 1. \tMencuci Tangan dengan Benar</b>\n\t\tMencuci tangan dengan benar adalah cara paling sederhana namun efektif untuk mencegah penyebaran Covid-19. Cucilah tangan dengan air mengalir dan sabun selama 20 detik. Pastikan seluruh bagian tangan tercuci hingga bersih, termasuk punggung tangan, pergelangan tangan, sela-sela jari, dan kuku. Setelah itu, keringkan tangan menggunakan tisu, handuk bersih, atau mesin pengering tangan. </string>
    <string name="deskmasker"> <b> 2. Menggunakan Masker</b> \n \t\tSecara umum, ada dua tipe masker yang bisa Anda digunakan untuk mencegah penularan Covid-19, yaitu masker bedah dan masker N95. Tapi karena keterbatasan jumlah produksi masker dan harga yang cukup mahal, disarankan untuk menggunakan masker kain. </string>
    <string name="deskdayatahan"> <b>3. Menjaga Daya Tahan Tubuh</b> \n\t\tUntuk menjaga dan meningkatkan daya tahan tubuh, Anda disarankan untuk mengonsumsi makanan sehat, seperti sayuran, buah-buahan, makanan berprotein, seperti telur, ikan, dan daging tanpa lemak.Selain itu, rutin berolahraga, tidur yang cukup, tidak merokok, dan tidak mengonsumsi minuman beralkohol juga bisa meningkatkan daya tahan tubuh.</string>
    <string name="deskjagajarak"><b> 4. Menerapkan Physical Distancing dan Isolasi Mandiri</b> \n\t\t\tHal ini dapat dilakukan dengan cara tidak bepergian keluar rumah, kecuali untuk keperluan yang mendesak atau darurat, seperti berbelanja bahan makanan atau berobat ketika sakit.
                                Pembatasan fisik juga dilakukan dengan cara menjaga jarak minimal 1 meter dengan orang lain dan selalu menggunakan masker, terutama saat beraktivitas di tempat umum atau keramaian.
                                \n\t\t\tSelain itu, isolasi mandiri juga dianjurkan untuk dilakukan oleh orang yang berisiko tinggi terinfeksi virus Corona, seperti lansia atau orang yang memiliki penyakit penyerta, misalnya hipertensi, diabetes, atau daya tahan tubuh yang lemah.</string>
    <string name="deskbersihkanrumah"> <b> 5. Membersihkan Rumah secara Rutin</b> \n\t\t\t\tSelain kebersihan diri, menjaga kebersihan rumah juga sangat penting. Hal ini dikarenakan Covid-19 terbukti dapat bertahan hidup selama berjam-jam dan bahkan berhari-hari di permukaan suatu benda.
                                \n\t\t\t\tSaat membersihkan atau melakukan disinfeksi, Anda perlu menggunakan sarung tangan dan masker, serta mencuci tangan dengan air bersih dan sabun setelah selesai membersihkan rumah. Hal ini dilakukan untuk mencegah penularan Covid-19 yang mungkin saja terjadi.</string>
</resources>