<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoGejala">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-51dp"
        tools:layout_editor_absoluteY="25dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewJudul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="63dp"
                android:fontFamily="@font/montserrat"
                android:text="Tips Terhindar Covid-19"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageCucitangan"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginTop="28dp"
                android:src="@drawable/ikoncucitangan"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewJudul" />

            <TextView
                android:id="@+id/tekscucitangan"
                android:layout_width="296dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/tips"
                android:fontFamily="@font/montserrat"
                android:justificationMode="inter_word"
                android:padding="16dp"
                android:text="@string/deskcucitangan"
                android:textColor="#000000"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageCucitangan" />

            <ImageView
                android:id="@+id/imagemasker"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/ikonmasker"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tekscucitangan" />

            <TextView
                android:id="@+id/deskmasker"
                android:layout_width="296dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/tips"
                android:fontFamily="@font/montserrat"
                android:justificationMode="inter_word"
                android:padding="16dp"
                android:text="@string/deskmasker"
                android:textColor="#000000"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imagemasker" />

            <ImageView
                android:id="@+id/imagedayatahan"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/ikondayatahan"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/deskmasker" />

            <TextView
                android:id="@+id/deskdayatahan"
                android:layout_width="296dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/tips"
                android:fontFamily="@font/montserrat"
                android:justificationMode="inter_word"
                android:padding="16dp"
                android:text="@string/deskdayatahan"
                android:textColor="#000000"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imagedayatahan" />

            <ImageView
                android:id="@+id/imagejagajarak"
                android:layout_width="262dp"
                android:layout_height="110dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/ikonjagajarak"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/deskdayatahan" />

            <TextView
                android:id="@+id/deskjagajarak"
                android:layout_width="296dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/tips"
                android:fontFamily="@font/montserrat"
                android:justificationMode="inter_word"
                android:padding="16dp"
                android:text="@string/deskjagajarak"
                android:textColor="#000000"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imagejagajarak" />

            <ImageView
                android:id="@+id/imagebersihrumah"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/ikonbersihrumah"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/deskjagajarak" />

            <TextView
                android:id="@+id/deskbersihrumah"
                android:layout_width="296dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="57dp"
                android:background="@drawable/tips"
                android:fontFamily="@font/montserrat"
                android:justificationMode="inter_word"
                android:padding="16dp"
                android:text="@string/deskbersihkanrumah"
                android:textColor="#000000"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imagebersihrumah" />


            <!--aaaa-->


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>